fix for overlappnig filters in IE

--- a/src/app/proposallist/proposallist.component.scss
+++ b/src/app/proposallist/proposallist.component.scss
@@ -1,6 +1,6 @@
 .filter-item{
     float: left;
-    width: 16.666667%;
+    width: auto;
 }
 .total-proposal-count{
     font-size: 2.25rem;
